--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <img id="kitty-2" src="images/kitty-2.png" alt="Kitty 2">
 
     <div id="basket">
-      <img src="images/kitty-3.png" alt="kitty 3">
+      <img id="kitty-3" src="images/kitty-3.png" alt="kitty 3">
     </div>
 
     <div id="ball"></div>
     <img src="images/kitty-4.png" alt="kitty 4">
-    
+
 
   </div><!-- .wrapper -->
   <audio id="player1">
